--- a/iOS/practice/PhotosExample/PhotosExample/Base.lproj/Main.storyboard
+++ b/iOS/practice/PhotosExample/PhotosExample/Base.lproj/Main.storyboard
@@ -28,13 +28,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="vU4-rp-wQu" kind="show" id="sgO-fX-qQr"/>
+                                            <segue destination="7OR-Rg-3Eo" kind="show" id="Jlv-ur-WIw"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="fcf-NX-75o"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="KFD-VM-hsQ"/>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="WFw-an-iTL"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="62x-W1-Q4h"/>
                                 </connections>
                             </tableView>
                         </subviews>
@@ -60,7 +60,7 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="tableView" destination="XfI-Ej-jC3" id="AXx-nj-O1F"/>
+                        <outlet property="tableView" destination="XfI-Ej-jC3" id="73R-5N-14w"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -68,49 +68,50 @@
             <point key="canvasLocation" x="1047.8260869565217" y="138.61607142857142"/>
         </scene>
         <!--Image Zoom View Controller-->
-        <scene sceneID="IWv-Rb-WBx">
+        <scene sceneID="jfe-q3-abe">
             <objects>
-                <viewController id="vU4-rp-wQu" customClass="ImageZoomViewController" customModule="PhotosExample" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="bcU-Gm-aeZ">
+                <viewController id="7OR-Rg-3Eo" customClass="ImageZoomViewController" customModule="PhotosExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Hji-n8-BcE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="zQO-Jz-8sG">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="VEj-OB-fcd">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CgF-ab-b5N">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7mN-U4-g6u">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="CgF-ab-b5N" firstAttribute="leading" secondItem="mRa-gz-yUl" secondAttribute="leading" id="Ak4-pI-SDE"/>
-                                    <constraint firstItem="CgF-ab-b5N" firstAttribute="top" secondItem="mRa-gz-yUl" secondAttribute="top" id="Vzo-Xz-2I3"/>
-                                    <constraint firstItem="mRa-gz-yUl" firstAttribute="trailing" secondItem="CgF-ab-b5N" secondAttribute="trailing" id="ok8-B4-o4E"/>
-                                    <constraint firstItem="mRa-gz-yUl" firstAttribute="bottom" secondItem="CgF-ab-b5N" secondAttribute="bottom" id="rdH-CA-Z8O"/>
+                                    <constraint firstItem="7mN-U4-g6u" firstAttribute="height" secondItem="VEj-OB-fcd" secondAttribute="height" id="2ot-1t-M5z"/>
+                                    <constraint firstAttribute="bottom" secondItem="7mN-U4-g6u" secondAttribute="bottom" id="6FW-jP-sy0"/>
+                                    <constraint firstItem="7mN-U4-g6u" firstAttribute="leading" secondItem="VEj-OB-fcd" secondAttribute="leading" id="JWb-b1-GBg"/>
+                                    <constraint firstAttribute="trailing" secondItem="7mN-U4-g6u" secondAttribute="trailing" id="bf0-tX-44k"/>
+                                    <constraint firstItem="7mN-U4-g6u" firstAttribute="top" secondItem="VEj-OB-fcd" secondAttribute="top" id="ddD-og-RM9"/>
+                                    <constraint firstItem="7mN-U4-g6u" firstAttribute="width" secondItem="VEj-OB-fcd" secondAttribute="width" id="oJx-FR-dac"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="Kyt-I3-ypL"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="mRa-gz-yUl"/>
                                 <connections>
-                                    <outlet property="delegate" destination="vU4-rp-wQu" id="mq8-i1-kqx"/>
+                                    <outlet property="delegate" destination="7OR-Rg-3Eo" id="hD5-yR-36u"/>
                                 </connections>
                             </scrollView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="oZD-o6-EYb"/>
+                        <viewLayoutGuide key="safeArea" id="THs-s8-GYb"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="VEj-OB-fcd" firstAttribute="leading" secondItem="THs-s8-GYb" secondAttribute="leading" id="RiA-t6-hS9"/>
+                            <constraint firstItem="VEj-OB-fcd" firstAttribute="trailing" secondItem="THs-s8-GYb" secondAttribute="trailing" id="jzO-dv-Gba"/>
+                            <constraint firstItem="VEj-OB-fcd" firstAttribute="top" secondItem="THs-s8-GYb" secondAttribute="top" id="qhQ-4j-Y8B"/>
+                            <constraint firstAttribute="bottom" secondItem="VEj-OB-fcd" secondAttribute="bottom" id="qvI-Xq-X1i"/>
+                        </constraints>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem systemItem="refresh" id="5Gj-5S-L6D"/>
-                    </toolbarItems>
-                    <navigationItem key="navigationItem" id="mAx-eL-vwb"/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationItem key="navigationItem" id="oKs-Yh-u4E"/>
                     <connections>
-                        <outlet property="imageView" destination="CgF-ab-b5N" id="jjd-TB-ccm"/>
+                        <outlet property="imageView" destination="7mN-U4-g6u" id="OI5-a5-yn5"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vum-SR-GTg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YvB-Lb-eQd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2011.594202898551" y="138.61607142857142"/>
+            <point key="canvasLocation" x="1831.8840579710147" y="138.61607142857142"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GC2-Su-FUI">
